# obsidian-ai-agent

./: .env.docker.example  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  GEMINI.md  README.md  RUST_BEST_PRACTICES_AUDIT.md  build.rs  config.docker.yaml.example  config.yaml.example  docker-compose.yaml  docker-entrypoint.sh  finance-system-guide.md  run-e2e-gemini.ps1  run-e2e.ps1  system-guide.md  test_urls.txt
.github/workflows/: docker.yml
.sisyphis/notepads/youtube-description-enhancement/: decisions.md
e2e-tests/: e2e.spec.ts  package-lock.json  package.json  playwright.config.ts
e2e-tests/playwright-report/: index.html
openspec/changes/phase-1-ai-independence/: design.md  proposal.md  tasks.md
openspec/changes/phase-1-ai-independence/docs/: REFACTORING_BLUEPRINT.md
openspec/changes/phase-1-ai-independence/specs/ai-provider-abstraction/: spec.md
src/: config.rs  error.rs  main.rs  utils.rs
src/ai/: classify.rs  client.rs  conflict.rs  guide.rs  mod.rs  summarize.rs  transcribe.rs  transcript_format.rs
src/ai/providers/: gemini.rs  mod.rs  openai_whisper.rs  openrouter.rs
src/audio/: convert.rs  download.rs  mod.rs
src/git/: chat_tracker.rs  conflict.rs  debounce.rs  mod.rs  sync.rs
src/handlers/: context.rs  finance.rs  mod.rs  pdf.rs  photo.rs  text.rs  url.rs  voice.rs
src/image/: exif.rs  mod.rs  process.rs
src/url/: detect.rs  extract.rs  mod.rs  transcript.rs  youtube.rs
src/vault/: daily_note.rs  frontmatter.rs  mod.rs  transcript.rs  writer.rs
src/webui/: app.css  app.js  index.html  server.rs
