[package]
name = "obsidian-ai-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Telegram Bot
teloxide = { version = "0.13", features = ["macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (for OpenRouter API)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Environment variables
dotenvy = "0.15"

# Base64 encoding (for audio data)
base64 = "0.22"

# Temporary files (for audio processing)
tempfile = "3"

# Async streams (for file download)
futures = "0.3"

# UUID generation (for unique filenames)
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
strip = true
